kubernetes/deploy/home/rustdesk/rustdesk/clusters/bastion/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustdesk
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rustdesk
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rustdesk
    spec:
      containers:
        - name: hbbs
          image: rustdesk/rustdesk-server:1.1.14
          imagePullPolicy: IfNotPresent
          command: ["hbbs", "-r", "127.0.0.1:21117"]
          ports:
            - containerPort: 21115
              protocol: TCP
            - containerPort: 21116
              protocol: TCP
            - containerPort: 21116
              protocol: UDP
            - containerPort: 21118
              protocol: TCP
            - containerPort: 21119
              protocol: TCP
          volumeMounts:
            - name: rustdesk-data
              mountPath: /root
        - name: hbbr
          image: rustdesk/rustdesk-server:1.1.14
          imagePullPolicy: IfNotPresent
          command: ["hbbr"]
          ports:
            - containerPort: 21117
              protocol: TCP
          volumeMounts:
            - name: rustdesk-data
              mountPath: /root
      volumes:
        - name: rustdesk-data
          persistentVolumeClaim:
            claimName: rustdesk-data
