kubernetes/deploy/home/rustdesk/rustdesk/clusters/bastion/service-hbbr.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustdesk-hbbr
  annotations:
    tailscale.com/hostname: rustdesk-hbbr
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: rustdesk
  ports:
    - name: relay-tcp
      port: 21117
      targetPort: 21117
      protocol: TCP
